# NeuroCarto

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .mypy.ini  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-opt.txt  requirements.txt  ruff.toml
.github/workflows/: python-publish.yml
doc/: Makefile  gen-api.py  list-lib.py
doc/source/: atlas.rst  blueprint.rst  blueprint_script.rst  conf.py  contact.rst  image_file.rst  image_plt.rst  index.rst  install.rst  npx_ceff.rst  npx_density.rst  npx_reference.rst  start.rst  tutorial.rst  views.rst
doc/source/api/: chmap.rst  config.rst  files.rst  main_app.rst  main_bokeh.rst  main_bokeh_multi.rst  main_index.rst  neuracarto.rst  neurocarto.rst  probe.rst  probe_npx.desp.rst  probe_npx.io.rst  probe_npx.meta.rst  probe_npx.npx.rst  probe_npx.plot.rst  probe_npx.rst  probe_npx.select.rst  probe_npx.select_default.rst  probe_npx.select_random.rst  probe_npx.select_weaker.rst  probe_npx.select_weaker_debug.rst  probe_npx.stat.rst  probe_npx.utils.rst  probe_npx.views.rst  util.atlas_brain.rst  util.atlas_slice.rst  util.atlas_struct.rst  util.bokeh_app.rst  util.bokeh_util.rst  util.debug.rst  util.edit.actions.rst  util.edit.atlas.rst  util.edit.category.rst  util.edit.checking.rst  util.edit.clustering.rst  util.edit.data.rst  util.edit.debug.rst  util.edit.moving.rst  util.edit.optimize.rst  util.edit.plot.rst  (+29 more)
doc/source/notebooks/: Example.ipynb  Extending.ipynb  Extending_View.ipynb  Fig2_example.imro  Fig2_example.policy.npy  Fig3_example.blueprint.npy  Fig3_example.imro  Selecting.ipynb  Statistics.ipynb  channelmap.matplotlibrc
res/: Fig2_example.policy.npy  Fig3_example.blueprint.npy  Fig3_example.config.json  Fig3_example.imro  Fig3_example.policy.npy  Fig5d_data.npy  animal_TS42_A02_20230820.blueprint.npy  animal_TS42_A02_20230820.config.json  animal_TS42_A02_20230820.imro  nptype21_imro.m  nptype24_imro.m  shank0_halfdensity.imro  shank1_halfdensity.imro  shank2_halfdensity.imro  shank3_halfdensity.imro
src/: LICENSE
src/chmap/: __main__.py  config.py  files.py  main_bokeh.py  main_bokeh_multi.py  probe.py  select.py
src/chmap/probe_npx/: __init__.py  desp.py  io.py  meta.py  npx.py  npx_probe.py  plot.py  select.py  select_default.py  select_weaker.py  select_weaker_arrangement.py  select_weaker_debug.py  stat.py  utils.py  views.py
src/chmap/util/: _atlas_brain_type.py  atlas_brain.py  atlas_slice.py  atlas_struct.py  bokeh_app.py  bokeh_util.py  bokeh_view.py  probe_coor.py  util_blueprint.py  util_numpy.py  utils.py
src/chmap/views/: __init__.py  atlas.py  atlas_ibl.py  base.py  blueprint.py  blueprint_script.py  data.py  data_density.py  data_efficient.py  edit_blueprint.py  image.py  image_blueprint.py  image_npy.py  image_plt.matplotlibrc  image_plt.py  probe.py  record.py  utils.py  view_efficient.py
src/neurocarto/: __main__.py  config.py  files.py  main_app.py  main_index.py  probe.py
src/neurocarto/util/: debug.py  (+10 more)
tests/: bp_example.py  default.matplotlibrc  main_blueprint_script.py  main_edit_blueprint.py  main_image_file.py  main_image_plt_plot_channelmap.py  main_optimize.py  main_rms.py  main_rms_si.py  npx_probe_test.py  plot_aprms.py  plot_blueprint.py  plot_blueprint_bp.py  plot_chmap.py  plot_chmap_policy.py  plot_electrode_prob.py  plot_fig3a.py  plot_fig3d.py  plot_fig3e.py  plot_fig5c.py  plot_fig5d.py  plot_uniform_chmaps.py  test_edit_blueprint.py  test_edit_blueprint.txt  test_electrode_select.py  test_imro_io.py  test_npx_probe.py  test_probe_oper.py  test_util_blueprint.py  test_view_plot_channelmap.py
(+55 files in other folders)
